--- a/app/src/main/res/layout/layout_add_person.xml
+++ b/app/src/main/res/layout/layout_add_person.xml
@@ -23,10 +23,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="Enter name">
+        android:hint="Enter age">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etAge"
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -37,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="Enter name">
+        android:hint="Enter occupation">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etOccupation"
